[package]
name = "amas-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
floem.workspace = true
ordered-float = "5.0.0"
petgraph = "0.8.2"
rand = "0.9.1"
oxc = "0.75.1"
oxc_ast_visit = "0.75.1"
oxc_ast = "0.75.1"
oxc_parser = "0.75.1"
oxc_semantic = "0.75.1"
oxc_span = "0.75.1"
oxc_allocator = "0.75.1"
walkdir = "2.0"
