[package]
name = "amas-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
floem.workspace = true
lapce-app.workspace = true
im                 = { workspace = true }
interprocess       = { workspace = true }
anyhow             = { workspace = true }
crossbeam-channel  = { workspace = true }
serde_json         = { workspace = true }
tracing-appender   = { workspace = true }
clap               = { workspace = true }
lapce-core         = { workspace = true }
lapce-rpc         = { workspace = true }
lapce-proxy        = { workspace = true }
lsp-types          = { workspace = true }
notify             = { workspace = true }
serde              = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile           = { workspace = true }
sha2             = { version = "0.10.8" }
backtrace          = { workspace = true }
zip              = { version = "0.6.6", default-features = false, features = ["deflate"] }
semver             = { workspace = true }
ordered-float = "5.0.0"
tar                = { workspace = true }
zstd               = { workspace = true }
tracing            = { workspace = true }
strum              = { workspace = true }
url                = { workspace = true }
petgraph = "0.8.2"
rand = "0.9.1"
oxc = "0.75.1"
oxc_ast_visit = "0.75.1"
oxc_ast = "0.75.1"
oxc_parser = "0.75.1"
oxc_semantic = "0.75.1"
oxc_span = "0.75.1"
oxc_allocator = "0.75.1"
walkdir = "2.0"
